test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/missing_type_specifier.plx
# A declaration must have at least one type specifier
# (Clang/GCC warn instead of failing here)
#
var = 0

pub fn main(none) i32 {
    return var
}
